samples/_failures_safe/1761253556_3dec66_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_225cad9f.c: In function ‘tokenize’:
./samples/SAFE/__tmp_225cad9f.c:161:34: error: expected ‘;’ at end of input
  161 |         tokens[token_count].value
      |                                  ^
      |                                  ;
./samples/SAFE/__tmp_225cad9f.c:161:9: error: expected declaration or statement at end of input
  161 |         tokens[token_count].value
      |         ^~~~~~
./samples/SAFE/__tmp_225cad9f.c:161:9: error: expected declaration or statement at end of input
